Updated CI.  Commented out Ubuntu GCC run.   Added simulation runs for

--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -19,7 +19,7 @@ jobs:
         backend:
           - mcode
           - llvm
-          - gcc
+#          - gcc
     name: '🐧 Ubuntu · ${{ matrix.backend }}'
     steps:
 
