--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -42,6 +42,13 @@ jobs:
     - name: '🚧 Run tests'
       run: tclsh ./OsvvmLibraries/.github/test.tcl
 
+    - name: '📤 Upload artifact: logs'
+      uses: actions/upload-artifact@v2
+      with:
+        name: ubuntu-ghdl-${{ matrix.backend }}-log
+        path: logs/GHDL-2.0.0-dev/OsvvmLibraries_RunAllTests_ghdl.log
+        if-no-files-found: error
+
 
   win:
     runs-on: windows-latest
@@ -83,3 +90,10 @@ jobs:
 
     - name: '🚧 Run tests'
       run: tclsh ./OsvvmLibraries/.github/test.tcl
+
+    - name: '📤 Upload artifact: logs'
+      uses: actions/upload-artifact@v2
+      with:
+        name: msys2-ghdl-${{ matrix.pkg }}${{ matrix.bits }}-log
+        path: logs/GHDL-2.0.0-dev/OsvvmLibraries_RunAllTests_ghdl.log
+        if-no-files-found: error
