--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -42,11 +42,16 @@ jobs:
     - name: '🚧 Run tests'
       run: tclsh ./OsvvmLibraries/.github/test.tcl
 
+    - name: 'Collect Artifacts'
+      run: mv logs/*/OsvvmLibraries_RunAllTests_ghdl.log OsvvmLibraries_RunAllTests_ghdl.log
+      
     - name: '📤 Upload artifact: logs'
       uses: actions/upload-artifact@v2
       with:
         name: ubuntu-ghdl-${{ matrix.backend }}-log
-        path: logs/GHDL-2.0.0-dev/OsvvmLibraries_RunAllTests_ghdl.log
+        path: 
+        - OsvvmLibraries_RunAllTests_ghdl.log
+        - OsvvmLibraries_RunAllTests_ghdl.yml
         if-no-files-found: error
 
 
@@ -91,9 +96,14 @@ jobs:
     - name: '🚧 Run tests'
       run: tclsh ./OsvvmLibraries/.github/test.tcl
 
+    - name: 'Collect Artifacts'
+      run: mv logs/*/OsvvmLibraries_RunAllTests_ghdl.log OsvvmLibraries_RunAllTests_ghdl.log
+      
     - name: '📤 Upload artifact: logs'
       uses: actions/upload-artifact@v2
       with:
         name: msys2-ghdl-${{ matrix.pkg }}${{ matrix.bits }}-log
-        path: logs/GHDL-2.0.0-dev/OsvvmLibraries_RunAllTests_ghdl.log
+        path: 
+        - OsvvmLibraries_RunAllTests_ghdl.log
+        - OsvvmLibraries_RunAllTests_ghdl.yml
         if-no-files-found: error
