ci: install tcllib on MSYS2 jobs

--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -81,6 +81,7 @@ jobs:
         install: >
           git
           mingw-w64-${{ matrix.arch }}-tcl
+          mingw-w64-${{ matrix.arch }}-tcllib
 
     - name: '🧰 Checkout'
       uses: actions/checkout@v2
