ci: install tcllib on Ubuntu jobs

--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -37,7 +37,7 @@ jobs:
     - name: '🛠️ Install tcl'
       run: |
         sudo apt update -qq
-        sudo apt install -y tcl
+        sudo apt install -y tcl tcllib
 
     - name: '🚧 Run tests'
       run: tclsh ./OsvvmLibraries/.github/test.tcl
