--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -61,13 +61,14 @@ jobs:
       fail-fast: false
       max-parallel: 2
       matrix:
-        include: [
-          #{icon: '🟪', bits: "32", arch: i686,   pkg: "llvm"  }, ! Not yet functional
-          {icon: '🟦', bits: '64', arch: x86_64, pkg: 'llvm'  },
-          {icon: '🟪', bits: '32', arch: i686,   pkg: 'mcode' },
-          #{icon: '🟦', bits: "64", arch: x86_64, pkg: "mcode" }, ! simulation with mcode is not yet supported on win64
-        ]
-    name: '${{ matrix.icon }} MSYS2 · ${{ matrix.pkg }}${{ matrix.bits }} '
+        include:
+          #- {icon: '🟪', msys: 'MINGW32', arch: i686,        pkg: "llvm" } ! Not yet functional
+          - {icon: '🟦', msys: 'MINGW64', arch: x86_64,      pkg: 'llvm' }
+          - {icon: '🟨', msys: 'UCRT64',  arch: ucrt-x86_64, pkg: 'llvm' } #! Experimental
+          - {icon: '🟪', msys: 'MINGW32', arch: i686,        pkg: 'mcode' }
+          #- {icon: '🟦', msys: 'MINGW64', arch: x86_64,      pkg: "mcode" } ! Simulation with mcode is not yet supported on win64
+          #- {icon: '🟨', msys: 'UCRT64',  arch: x86_64,      pkg: "mcode" } ! Experimental; Simulation with mcode is not yet supported on win64
+    name: '${{ matrix.icon }} ${{ matrix.msys }} · ${{ matrix.pkg }}'
     defaults:
       run:
         shell: msys2 {0}
@@ -76,7 +77,7 @@ jobs:
     - name: '${{ matrix.icon }} Setup MSYS2'
       uses: msys2/setup-msys2@v2
       with:
-        msystem: MINGW${{ matrix.bits }}
+        msystem: ${{ matrix.msys }}
         update: true
         install: >
           git
@@ -103,7 +104,7 @@ jobs:
     - name: '📤 Upload artifact: logs'
       uses: actions/upload-artifact@v2
       with:
-        name: msys2-ghdl-${{ matrix.pkg }}${{ matrix.bits }}-log
+        name: msys2-ghdl-${{ matrix.pkg }}-${{ matrix.msys }}-log
         path: |
           OsvvmLibraries_RunAllTests_ghdl.log
           OsvvmLibraries_RunAllTests_ghdl.yml
