--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -124,8 +124,9 @@ jobs:
       uses: actions/download-artifact@v2
 
     - name: 📊 Publish Unit Test Results
-      uses: EnricoMi/publish-unit-test-result-action@v1
+      uses: dorny/test-reporter@v1
       if: always()
       with:
-        comment_title: "OSVVM Verification Component Regression Suite"
-        files: ./**/OsvvmLibraries_RunAllTests_ghdl.xml
+        name: "OSVVM Verification Component Regression Suite"
+        path: './**/OsvvmLibraries_RunAllTests_ghdl.xml'
+        reporter: jest-junit
