--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -122,10 +122,12 @@ jobs:
 
     - name: '📥 Download artifact: package'
       uses: actions/download-artifact@v2
+      with:
+        path: artifacts
 
     - name: 📊 Publish Unit Test Results
-      uses: EnricoMi/publish-unit-test-result-action@v1
-      if: always()
+      uses: dorny/test-reporter@v1
       with:
-        comment_title: "OSVVM Verification Component Regression Suite"
-        files: ./**/OsvvmLibraries_RunAllTests_ghdl.xml
+        name: OSVVM VC Regression Results
+        path: artifacts/**/*.xml
+        reporter: java-junit
