--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -42,17 +42,17 @@ jobs:
         run: tclsh ./OsvvmLibraries/.github/test.tcl
 
       - name: 'Collect Artifacts'
-        run: mv logs/*/OsvvmLibraries_RunAllTests_ghdl.log OsvvmLibraries_RunAllTests_ghdl.log
+        run: mv logs/*/*.log .
         
       - name: '📤 Upload artifact: logs'
         uses: actions/upload-artifact@v2
         with:
           name: ubuntu-ghdl-${{ matrix.backend }}-log
           path: |
-            OsvvmLibraries_RunAllTests_ghdl.log
-            OsvvmLibraries_RunAllTests_ghdl.yml
-            OsvvmLibraries_RunAllTests_ghdl.html
-            OsvvmLibraries_RunAllTests_ghdl.xml
+            *.log
+            *.yml
+            *.html
+            *.xml
             reports/*.html
             reports/**/*.html
           if-no-files-found: error
@@ -99,17 +99,17 @@ jobs:
         run: tclsh ./OsvvmLibraries/.github/test.tcl
 
       - name: 'Collect Artifacts'
-        run: mv logs/*/OsvvmLibraries_RunAllTests_ghdl.log OsvvmLibraries_RunAllTests_ghdl.log
+        run: mv logs/*/*.log .
         
       - name: '📤 Upload artifact: logs'
         uses: actions/upload-artifact@v2
         with:
           name: msys2-ghdl-${{ matrix.pkg }}-${{ matrix.msys }}-log
           path: |
-            OsvvmLibraries_RunAllTests_ghdl.log
-            OsvvmLibraries_RunAllTests_ghdl.yml
-            OsvvmLibraries_RunAllTests_ghdl.html
-            OsvvmLibraries_RunAllTests_ghdl.xml
+            *.log
+            *.yml
+            *.html
+            *.xml
             reports/*.html
           if-no-files-found: error
 
