Added DpRam submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "Documentation"]
 	path = Documentation
 	url = ../Documentation.git
+[submodule "DpRam"]
+	path = DpRam
+	url = https://github.com/OSVVM/DpRam.git
