Adding Ethernet as Submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "DpRam"]
 	path = DpRam
 	url = ../DpRam.git
+[submodule "Ethernet"]
+	path = Ethernet
+	url = https://GitHub.com/OSVVM/Ethernet
