Minor adjustment for windows runner

--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -62,11 +62,11 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - { icon: '🟦', msys: MINGW64, backend: llvm }
-          - { icon: '🟨', msys: UCRT64,  backend: llvm }
-         # - { icon: '🟪', msys: MINGW32, backend: mcode }  ! removed since it is failing
-          - { icon: '🟦', msys: MINGW64, backend: mcode }
-          - { icon: '🟨', msys: UCRT64,  backend: mcode }
+          - {icon: '🟦', msys: 'MINGW64', pkg: 'llvm'  }
+          - {icon: '🟨', msys: 'UCRT64',  pkg: 'llvm'  } 
+          - {icon: '🟦', msys: 'MINGW64', pkg: 'mcode' } 
+          - {icon: '🟨', msys: 'UCRT64',  pkg: 'mcode' } 
+
 
     name: '${{ matrix.icon }} ${{ matrix.msys }} · ${{ matrix.pkg }}'
     defaults:
