adding options to dorny

--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -9,7 +9,6 @@ on:
 
 jobs:
 
-
   lin:
     runs-on: ubuntu-latest
     strategy:
@@ -130,4 +129,6 @@ jobs:
         with:
           name: OSVVM VC Regression Results
           path: artifacts/**/*.xml
-          reporter: java-junit
+          reporter: 'java-junit'
+          list-suites: 'all'
+          list-tests: 'all'
