Try again on NVC actions

--- a/.github/workflows/Test_NVC.yml
+++ b/.github/workflows/Test_NVC.yml
@@ -57,7 +57,7 @@ jobs:
 
   publish-test-results:
     if: always()
-    needs: [lin, win]
+    needs: [win]
     runs-on: ubuntu-latest
     name: 📊 Publish Unit Tests Results
     steps:
