Got the 2nd include hidden files

--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -97,6 +97,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: log-msys2-ghdl-${{ matrix.pkg }}-${{ matrix.msys }}
+          include-hidden-files: true
           path: |
             *.log
             *.yml
