--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -44,13 +44,13 @@ jobs:
       matrix:
         os:
           - {icon: "🐧",   name: "Ubuntu",  image: "ubuntu-24.04", shell: "bash",      runtime: ""}
-          - {icon: "🍏",   name: "macOS",   image: "macos-14",     shell: "bash",      runtime: ""}
+#          - {icon: "🍏",   name: "macOS",   image: "macos-14",     shell: "bash",      runtime: ""}       # Wrong float values in generated XML.
           - {icon: "🪟🟨", name: "Windows", image: "windows-2022", shell: "msys2 {0}", runtime: "ucrt64"}
         backend:
           - mcode
           - llvm
         exclude:
-          - {os: {name: "macOS"}}  #, backend: "mcode"}
+          - {os: {name: "macOS"}, backend: "mcode"}   # mcode is not supported for aarch64
 
     defaults:
       run:
@@ -135,7 +135,7 @@ jobs:
       matrix:
         include:
           - {icon: "🐧",   name: "Ubuntu",  image: "ubuntu-24.04", shell: "bash"}
-#          - {icon: "🪟",   name: "Windows", image: "windows-2022", shell: "powershell"}     # No TCL environment available. The embedded TCL of NVC doesn't contain tcllib.
+##          - {icon: "🪟",   name: "Windows", image: "windows-2022", shell: "powershell"}    # No TCL environment available. The embedded TCL of NVC doesn't contain tcllib.
           - {icon: "🪟🟨", name: "Windows", image: "windows-2022", shell: "msys2 {0}"}       # Installation in Windows via MSI, but called from UCRT64.
 
     defaults:
@@ -323,8 +323,7 @@ jobs:
       - Package
       - GHDL
       - NVC
-#    if: github.ref == 'refs/tags/testing'
-#    if: startsWith(github.ref, 'refs/tags/v')
+    if: startsWith(github.ref, 'refs/tags/v')
     secrets: inherit
     permissions:
       contents: write
